fix: z-index på header i mobile

--- a/css/_desktop.css
+++ b/css/_desktop.css
@@ -85,7 +85,7 @@ header{
         background-color: rgba(245, 222, 179, 0.2);
         margin-top: 10%;
         margin-left: 30%;
-        z-index: 1;
+
     }
     .logo_text_2{
         font-size: 1.5em;
